--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -122,9 +122,14 @@ jobs:
         run: |
           python -m nuitka `
             --standalone `
-            --windows-console-mode=disable `
+            --windows-console-mode=force `
             --windows-icon-from-ico=icon.ico `
             --enable-plugin=pyside6 `
+            --include-package=cv2 `
+            --include-package=numpy `
+            --include-package=PIL `
+            --include-package=psutil `
+            --include-package=hidapi `
             --include-data-dir=presets=presets `
             --include-data-dir=elements=elements `
             --include-data-files=icon.ico=icon.ico `
