--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,116 +1,60 @@
-name: Build Release
+name: Build and Release
 
 on:
   push:
     tags:
-      - 'v*.*.*'
-      - 'beta-v*.*.*'
-
-permissions:
-  contents: write
+      - 'v*'  # Triggers on version tags like v1.0.0
+  workflow_dispatch:  # Allows manual trigger from GitHub UI
 
 jobs:
-  build:
+  build-windows:
     runs-on: windows-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'
-          cache: 'pip'
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.11'
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install nuitka ordered-set zstandard
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        pip install pyinstaller
 
-      - name: Get version from tag
-        id: version
-        run: echo "VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
-        shell: bash
+    - name: Build with PyInstaller
+      run: |
+        pyinstaller --name="Thermal-Engine" `
+          --windowed `
+          --add-data="elements;elements" `
+          --hidden-import=PySide6.QtCore `
+          --hidden-import=PySide6.QtGui `
+          --hidden-import=PySide6.QtWidgets `
+          --hidden-import=device_backends `
+          --hidden-import=video_background `
+          --collect-all PySide6 `
+          main.py
 
-      - name: Build with Nuitka
-        run: |
-          $version = "${{ steps.version.outputs.VERSION }}".TrimStart('v')
-          python -m nuitka `
-            --standalone `
-            --windows-console-mode=disable `
-            --windows-icon-from-ico=assets/icon.ico `
-            --windows-company-name="Thermal Engine" `
-            --windows-product-name="ThermalEngine" `
-            --windows-product-version="$version" `
-            --windows-file-version="$version" `
-            --enable-plugin=pyside6 `
-            --include-package=cv2 `
-            --include-package=numpy `
-            --include-package=PIL `
-            --include-package=psutil `
-            --include-package=hid `
-            --include-package=elements `
-            --include-data-dir=presets=presets `
-            --include-data-files=elements/*.py=elements/ `
-            --include-data-files=assets/icon.ico=icon.ico `
-            --include-data-files=assets/icon.png=icon.png `
-            --assume-yes-for-downloads `
-            --output-dir=dist `
-            --output-filename=ThermalEngine.exe `
-            main.py
+    - name: Create ZIP archive
+      run: |
+        cd dist
+        powershell Compress-Archive -Path Thermal-Engine -DestinationPath Thermal-Engine-Windows.zip
 
-          # Verify data directories were included
-          Write-Host "=== Checking data directories ==="
-          if (Test-Path "dist\main.dist\elements") {
-            Write-Host "elements folder exists:"
-            Get-ChildItem "dist\main.dist\elements" | ForEach-Object { Write-Host "  $_" }
-          } else {
-            Write-Host "ERROR: elements folder missing!"
-            exit 1
-          }
-          if (Test-Path "dist\main.dist\presets") {
-            Write-Host "presets folder exists"
-          } else {
-            Write-Host "ERROR: presets folder missing!"
-            exit 1
-          }
+    - name: Upload artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: Thermal-Engine-Windows
+        path: dist/Thermal-Engine-Windows.zip
 
-          # Rename output folder to match expected structure
-          if (Test-Path "dist\main.dist") {
-            Move-Item -Path "dist\main.dist" -Destination "dist\ThermalEngine" -Force
-          }
-
-          Write-Host "=== Nuitka build output ==="
-          Get-ChildItem "dist\ThermalEngine" | ForEach-Object { Write-Host $_.Name }
-        shell: pwsh
-
-      - name: Create ZIP archive
-        run: Compress-Archive -Path "dist/ThermalEngine/*" -DestinationPath "ThermalEngine-${{ steps.version.outputs.VERSION }}.zip"
-        shell: pwsh
-
-      - name: Install Inno Setup
-        run: choco install innosetup -y --no-progress
-        shell: pwsh
-
-      - name: Build Installer with Inno Setup
-        run: |
-          $version = "${{ steps.version.outputs.VERSION }}"
-          & "C:\Program Files (x86)\Inno Setup 6\ISCC.exe" "/DMyAppVersion=$version" "installer.iss"
-
-          Write-Host "=== Installer output ==="
-          Get-ChildItem -Filter "*.exe" | Where-Object { $_.Name -like "*Setup*" } | ForEach-Object { Write-Host $_.Name }
-        shell: pwsh
-
-      - name: Create GitHub Release
-        uses: softprops/action-gh-release@v1
-        with:
-          files: |
-            ThermalEngine-${{ steps.version.outputs.VERSION }}.zip
-            ThermalEngine-${{ steps.version.outputs.VERSION }}-Setup.exe
-          generate_release_notes: true
-          draft: false
-          prerelease: ${{ contains(github.ref, 'beta') || contains(github.ref, 'alpha') }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Create Release
+      if: startsWith(github.ref, 'refs/tags/')
+      uses: softprops/action-gh-release@v1
+      with:
+        files: dist/Thermal-Engine-Windows.zip
+        draft: false
+        prerelease: false
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
