--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -96,6 +96,7 @@ jobs:
       if: steps.version_bump.outputs.should_release == 'true'
       run: |
         pyinstaller --name="ThermalEngine" `
+          --onefile `
           --windowed `
           --icon="assets/icon.ico" `
           --add-data="elements;elements" `
@@ -108,16 +109,15 @@ jobs:
           --collect-all PySide6 `
           main.py
 
-    - name: Create ZIP archive
+    - name: Rename executable
       if: steps.version_bump.outputs.should_release == 'true'
       run: |
-        cd dist/ThermalEngine
         $version = "${{ steps.version_bump.outputs.new_version }}"
-        $zipName = "ThermalEngine-$version-Windows.zip"
-        powershell Compress-Archive -Path * -DestinationPath "../$zipName"
-        echo "Created ZIP: $zipName"
-        echo "zip_name=$zipName" >> $env:GITHUB_OUTPUT
-      id: create_zip
+        $exeName = "ThermalEngine-$version-Windows.exe"
+        Move-Item "dist/ThermalEngine.exe" "dist/$exeName"
+        echo "Renamed to: $exeName"
+        echo "exe_name=$exeName" >> $env:GITHUB_OUTPUT
+      id: rename_exe
 
     - name: Create Release
       if: steps.version_bump.outputs.should_release == 'true'
@@ -127,7 +127,7 @@ jobs:
         name: Release ${{ steps.version_bump.outputs.new_version }}
         draft: false
         prerelease: false
-        files: dist/ThermalEngine-${{ steps.version_bump.outputs.new_version }}-Windows.zip
+        files: dist/${{ steps.rename_exe.outputs.exe_name }}
         generate_release_notes: true
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -137,4 +137,4 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: ThermalEngine-${{ steps.version_bump.outputs.new_version }}
-        path: dist/ThermalEngine-${{ steps.version_bump.outputs.new_version }}-Windows.zip
+        path: dist/${{ steps.rename_exe.outputs.exe_name }}
