--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,6 @@ pyusb>=1.2.1
 # Video background support (optional)
 opencv-python>=4.8.0
 numpy>=1.24.0
+
+# Version comparison for update checks
+packaging>=23.0
