fix: version detection for update check

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -145,6 +145,7 @@ jobs:
           --hidden-import=PySide6.QtCore `
           --hidden-import=PySide6.QtGui `
           --hidden-import=PySide6.QtWidgets `
+          --hidden-import=version `
           --hidden-import=device_backends `
           --hidden-import=video_background `
           --collect-submodules=device_backends `
