fix: PyInstaller crash on check update

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -141,6 +141,7 @@ jobs:
           --add-data="elements;elements" `
           --add-data="assets;assets" `
           --add-data="presets;presets" `
+          --add-data="app_version.py;." `
           --add-binary="libusb-1.0.dll;." `
           --hidden-import=PySide6.QtCore `
           --hidden-import=PySide6.QtGui `
